--- a/discover.html
+++ b/discover.html
@@ -28,27 +28,56 @@
         <div class="p-5 bg-slate-200 rounded-lg mt-4">
             <h1 class="mb-2"><b>Question-1: What are the different ways to select an element in the DOM?</b></h1>
             <hr>
-            <p>-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+            <p><b>Ans:</b> There are many ways to select an element in DOM. </p>
+            <ol class="ml-10">
+                <li>getElementById()</li>
+                <li>getElementsByClassName()</li>
+                <li>getElementsByTagName()</li>
+                <li>getElementsByName()</li>
+                <li>querySelectorAll()</li>
+                <li>querySelector()</li>
+            </ol>
         </div>
         <div class="p-5 bg-slate-200 rounded-lg mt-4">
             <h1 class="mb-2"><b>Question-2: What is the difference between innerHTML, innerText, and textContent ?</b></h1>
             <hr>
-            <p>-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+            <b>Ans:</b>
+            <ol class="ml-10">
+                <li>innerHTML return the HTML of the selected element </li>
+                <li>innerText return the text of the selected element.</li>
+                <li>textContent return the text of selected element and it's child</li>
+            </ol>
+            <p></p>
         </div>
         <div class="p-5 bg-slate-200 rounded-lg mt-4">
             <h1 class="mb-2"><b>Question-3: What is event delegation in the DOM?</b></h1>
             <hr>
-            <p>-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+            <h1><b>Ans:</b></h1>
+            <p class="ml-10">It is similar to addEventListener, this tag catch parents to set it's child.</p>
         </div>
         <div class="p-5 bg-slate-200 rounded-lg mt-4">
             <h1 class="mb-2"><b>Question-4: What is event bubbling in the DOM?</b></h1>
             <hr>
-            <p>-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+            <h1><b>Ans:</b></h1>
+            <p class="ml-10">This event bubbles up from child to its parent.</p>
         </div>
         <div class="p-5 bg-slate-200 rounded-lg mt-4">
             <h1 class="mb-2"><b>Question-5: How do you create, add, and remove elements using JavaScript?</b></h1>
             <hr>
-            <p>-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+            <p><b>Ans:</b></p>
+            <ol class="ml-10"><li>
+                <h1>-------create element--------</h1>
+                const P = document.createElement("p")
+
+            </li>
+            <li>
+                <h1>-------add element-------</h1>
+                container.appendChild(P)
+            </li>
+            <li>
+                <h1>------remove element------</h1>
+                container.remove(P)
+            </li></ol>
         </div>
     </main>
     
