--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="flex items-center gap-6">
             <div class="flex items-center gap-2 bg-slate-100 p-2 rounded-full">
                 <img src="./assets/checkbox.png" alt="">
-                <p id="plus" class="text-xl"><b>23</b></p>
+                <p id="plus" class="text-xl font-bold">23</p>
             </div>
             <button id="changeBgColor"><img class="bg-slate-100 p-2 rounded-full" src="./assets/theme-btn.png" alt=""></button>
         </nav>
@@ -38,7 +38,7 @@
                         <img src="./assets/checkbox.png" alt="">
                         <div>
                             <small>Task Assignment</small>
-                            <h1 id="minus" class="text-xl"><b>06</b></h1>
+                            <h1 id="minus" class="text-xl font-bold">06</h1>
                         </div>
                     </div>
                     <div id="discover" class="flex items-center gap-5 bg-gradient-to-r from-blue-700 to-blue-200 rounded-lg p-5 w-150">
