--- a/discover.html
+++ b/discover.html
@@ -85,6 +85,8 @@
 
 
 
+    <script src="./script/script.js"></script>
+    <script src="./script/shortCut.js"></script>
     <script src="./script/2ndPage.js"></script>
 </body>
 </html>
