--- a/index.html
+++ b/index.html
@@ -179,5 +179,6 @@ Store the user's preference in localStorage, update CSS variables dynamically, a
 
     <script src="./script/script.js"></script>
     <script src="./script/shortCut.js"></script>
+    <script src="./script/2ndPage.js"></script>
 </body>
 </html>
