--- a/discover.html
+++ b/discover.html
@@ -20,7 +20,11 @@
             <img src="./assets/logo.png" alt="">
             <p class="text-xl">Dev<b>Board</b></p>
         </nav>
-        <button id="backButton" class="btn bg-blue-600 text-white rounded-lg">Back to Desk</button>
+        <a href="./index.html">
+
+            <button id="backButton" class="btn bg-blue-600 text-white rounded-lg">Back to Desk</button>
+
+        </a>
         
     </header>
     <main>
